# Orientation

./: .gitignore  README.md  pyproject.toml
configs/: default.json
outputs/: comparison.json
src/: Object_detection.py  TestImageGen.py  tempCodeRunnerFile.py
src/orient/: __init__.py  comparison.py  config.py  detector.py  geometry.py  image_mode.py  live_mode.py  logger.py  main.py  orientation.py  reference_manager.py  segmentation.py  tracker.py  video_mode.py  visualization.py
tests/: test_geometry.py  test_orientation.py  test_reference_manager.py  test_tracker.py
tools/: generate_test_image.py
